<resources>
    <string name="app_name">Teori Notasi</string>
    <string name="title_activity_tanda_kunci">TandaKunci</string>
    <string name="ptk">Jenis (nama) titinada, baru dapat ditentukan bila pada permulaan garis paranada diberi tanda kunci.
        \nAda 2 macam kunci  yakni kunci G (treble cleff) dan kunci F (bass cleff)</string>
    <string name="kg1">Tanda kunci G (treble cleff) adalah seperti gambar nomor 1, dimana tanda kunci tersebut dimulai dari garis paranada kedua. Karena itu pada garis kedua itulah terletak nada G.
        \nNada G dapat ditunjukkan dalam gambar 2 :</string>
    <string name="kg2">Nada-nada tinggi dan rendah harus diletakkan pada garis bantu (ledger lines) di atas dan di bawah garis paranada. Seperti gambar 3 :</string>
    <string name="kf1">Bentuk kunci F seperti huruf C terbalik, dengan dua titik di belakangnya seperti gambar  1 :</string>
    <string name="kf2">Nada F terletak tepat pada garis ke-4 (diantara dua titik) seperti gambar 2 :</string>
    <string name="kf3">Pada umumnya, kunci F dimainkan oleh tangan kiri pada keyboard, piano, ataupun organ. Tetapi hal tersebut tidak mutlak. Ada kalanya not-not yang dimainkan tangan kiri ditulis juga dengan kunci G.</string>
    <string name="p1">Paranada adalah sususan garis sejajar yang sama jaraknya. Terdiri dari 5 garis yang digunakan untuk tempat notasi balok.\nDiantara garis terdapat jarak yang disebut <u>spasi</u> (warna kuning) yang dapat dilihat pada gambar 1 :\n</string>
    <string name="p2">Nada-nada tinggi dan rendah harus diletakkan pada garis bantu (ledger lines) di atas dan di bawah garis paranada. Seperti gambar 3 :\n</string>
    <string name="p3">\n\nGaris Paranada terdiri dari dua, yakni Paranada Tunggal (Stave) dan Paranada Ganda (Grand Staves), dicontohkan pada gambar 3 dan 4 : \n\n</string>
    <string name="p4">\nStave biasanya digunakan untuk alat musik melodis seperti biola, recorder, saxophone, dan lainnya.\n\nGrand Sstaves digunakan untuk alat musik harmonis yang biasanya menggunakan dua tangan, seperti piano, keyboard dan lainnya.\n</string>
    <string name="ptn">Tangga nada adalah susunan nada-nada yang terdiri dari 7 nada pokok yakni C D E F G A B C. Pada umumnya tangga nada yang disusun dari 7 nada tersebut diakhiri dengan nada ke 8. Seperti contoh 1 di bawah ini :\n</string>
    <string name="ptn2">\nTangga nada terdiri dari langkah kecil (disebut langkah setengah) dan langkah besar (disebut langkah penuh). Langkah setengah adalah jarak satu tuts piano ke tuts di sebelahnya.\nJarak setengah pada tuts piano dapat dilihat pada contoh 2 :\n</string>
    <string name="ptn3">\nLangkah penuh adalah jarak satu lompatan tuts piano ke tuts di sebelahnya, baik tuts hitam ataupun putih.\nJarak penuh pada tuts piano dapat dilihat pada contoh 3 :\n</string>
    <string name="title_activity_nama_nada">NAMA NADA</string>
    <string name="title_activity_tangga_nada">TANGGA NADA</string>
    <string name="title_activity_simbol_durasi">SIMBOL DURASI</string>
    <string name="tt">\nTanda tempo adalah istilah yang berhubungan dengan waktu. Tanda-tanda tersebut adalah :\n\n</string>
    <string name="ts">\nTanda Sukat adalah simbol yang memberitahukan banyaknya beat (ketukan) dan nilai not apa yang akan muncul pada setiap birama.\nTanda sukat dapat dilihat pada gambar di bawah ini :\n</string>
    <string name="ts2">\nAngka bagian atas menunjukkan jumlah beat (ketukan) dalam birama, dan angka di bagian bawah menunjukkan nilai not yang digunakan dalam birama yang sama.\n\n</string>
    <string name="title_activity_tanda_dinamik">TANDA DINAMIK </string>
    <string name="dk1">\nTanda dinamika adalah tanda yang digunakan untuk membeda-bedakan kekuatan suara.\nTanda-tanda tersebut adalah :\n</string>
    <string name="at">\nArtikulasi menunjukkan bagaimana pola dan teknik yang harus dimainkan pada sebuah not.\n</string>
    <string name="tc1">Nada <u>C</u></string>
    <string name="tc2">Nada <u>C#</u></string>
    <string name="tc3">Nada <u>D</u></string>
    <string name="tc4">Nada <u>D#</u></string>
    <string name="tc5">Nada <u>E</u></string>
    <string name="tc6">Nada <u>F</u></string>
    <string name="tc7">Nada <u>F#</u></string>
    <string name="tc8">Nada <u>G</u></string>
    <string name="tc9">Nada <u>G#</u></string>
    <string name="tc10">Nada <u>A</u></string>
    <string name="tc11">Nada <u>A#</u></string>
    <string name="tc12">Nada <u>B</u></string>
    <string name="tc13">Nada <u>C</u></string>
    <string name="tc14">Nada <u>C#</u></string>
    <string name="tc15">Nada <u>D</u></string>
    <string name="tc16">Nada <u>D#</u></string>
    <string name="tc17">Nada <u>E</u></string>
    <string name="tc18">Nada <u>F</u></string>
    <string name="tc19">Nada <u>F#</u></string>
    <string name="tc20">Nada <u>G</u></string>
    <string name="tc21">Nada <u>G#</u></string>
    <string name="tc22">Nada <u>A</u></string>
    <string name="tc23">Nada <u>A#</u></string>
    <string name="tc24">Nada <u>B</u></string>
    <string name="tc25">Nada <u>C</u></string>
    <string name="bc1">Nada <u>C</u></string>
    <string name="bc2">Nada <u>B</u></string>
    <string name="bc3">Nada <u>A#</u></string>
    <string name="bc4">Nada <u>A</u></string>
    <string name="bc5">Nada <u>G#</u></string>
    <string name="bc6">Nada <u>G</u></string>
    <string name="bc7">Nada <u>F#</u></string>
    <string name="bc8">Nada <u>F</u></string>
    <string name="bc9">Nada <u>E</u></string>
    <string name="bc10">Nada <u>D#</u></string>
    <string name="bc11">Nada <u>D</u></string>
    <string name="bc12">Nada <u>C#</u></string>
    <string name="bc13">Nada <u>C</u></string>
    <string name="bc14">Nada <u>B</u></string>
    <string name="bc15">Nada <u>A#</u></string>
    <string name="bc16">Nada <u>A</u></string>
    <string name="bc17">Nada <u>G#</u></string>
    <string name="bc18">Nada <u>G</u></string>
    <string name="bc19">Nada <u>F#</u></string>
    <string name="bc20">Nada <u>F</u></string>
    <string name="bc21">Nada <u>E</u></string>
    <string name="bc22">Nada <u>D#</u></string>
    <string name="bc23">Nada <u>D</u></string>
    <string name="bc24">Nada <u>C#</u></string>
    <string name="bc25">Nada <u>C</u></string>
    <string name="ln">\nLetak nada dalam paranada dapat dilihat pada gambar 1 :\n</string>
    <string name="ln2">\nLetak nada pada Ledger Lines :\n</string>
    <string name="ta">Tanda Aksidental merupakan simbol yang digunakan untuk menaikkan/menurunkan nada satu atau setengah laras.\nTanda Aksidental dapat dilihat di bawah ini :\n</string>
    <string name="my">Tangga Nada Mayor memiliki rentang jarak </string>
    <string name="my2">1  -  1  -  1/2  -  1  -  1  -  1  -  1/2</string>
    <string name="my3">\nMacam-macam tangga nada mayor dapat dilihat di bawah ini dengan not warna merah yang mendapat tanda aksidental sharp dan not warna hijau untuk aksidental flat :\n</string>
    <string name="mn">Tangga nada minor dimulai dari nada la.\nTangga nada minor terdiri dari :\n</string>
    <string name="mn2">Tangga Nada Minor Asli memiliki rentang jarak :</string>
    <string name="mn3">1  -  1/2  -  1  -  1  -  1/2  -  1  -  1</string>
    <string name="mh">Pada tangga nada minor harmonis, nada ke-7 dinaikkan setengah langkah sehingga memiliki rentang jarak sebagai berikut :</string>
    <string name="mm">Pada tangga nada minor melodis, nada ke-6 dan nada ke-7 dinaikkan setengah langkah pada ascending (naik) saja, sedangkan pada pola descending (turun) nada ke-6 dan ke-7 diturunkan setengah (tetap sama seperti minor aslinya) sehingga memiliki rentang jarak sebagai berikut :</string>
    <string name="rs">Rest atau tanda istirahat memiliki arti diam. Macam-macam tanda rest dapat dilihat di bawah ini :</string>
    <string name="nb">Titik yang berada samping not memiliki nilai setengah dari nilai not tersebut. Not bertitik sering disebut Dotted Note. Contoh Dotted Note dapat dilihat di bawah ini :</string>
    <string name="nb2">Selain not dengan satu titik, terdapat juga not dengan dua titik di sebelah not. Titik yang kedua memiliki nilai setengah dari titik pertama. Not dengan dua titik sering disebut Double Dotted Note. Contoh Double Dotted Not dapat dilihat di bawah ini :</string>
    <string name="tp">Triplet atau sering disebut dengan Triool adalah rangkaian 3 not yang seimbang dengan perbandingan 2 hitungan not atau sejumlah hitungan lainnya. Dilambangkan dengan lengkung pengikat berangka tiga. Jenis-jenis triplet dapat dilihat di bawah ini :</string>
    <string name="cr">Chord adalah kombinasi nada yang mencerminkan landasan harmoni dari lagu yang sedang dimainkan.\nMacam-macam chord dapat dilihat di bawah ini :</string>
    <string name="crc1"><u>Chord C</u></string>
    <string name="crc2"><u>Chord C6</u></string>
    <string name="crc3"><u>Chord C7</u></string>
    <string name="crc4"><u>Chord C7+ (Augmented 7)</u></string>
    <string name="crc5"><u>Chord C7Sus</u></string>
    <string name="crc6"><u>Chord C9</u></string>
    <string name="crc7"><u>Chord CMaj7</u></string>
    <string name="crc8"><u>Chord C+ (Augmented)</u></string>
    <string name="crc9"><u>Chord Cdim</u></string>
    <string name="crc10"><u>Chord Cm</u></string>
    <string name="crc11"><u>Chord Cm6</u></string>
    <string name="crc12"><u>Chord Cm7</u></string>
    <string name="crd1"><u>Chord D</u></string>
    <string name="crd2"><u>Chord D6</u></string>
    <string name="crd3"><u>Chord D7</u></string>
    <string name="crd4"><u>Chord D7+ (Augmented 7)</u></string>
    <string name="crd5"><u>Chord D7Sus</u></string>
    <string name="crd6"><u>Chord D9</u></string>
    <string name="crd7"><u>Chord DMaj7</u></string>
    <string name="crd8"><u>Chord D+ (Augmented)</u></string>
    <string name="crd9"><u>Chord Ddim</u></string>
    <string name="crd10"><u>Chord Dm</u></string>
    <string name="crd11"><u>Chord Dm6</u></string>
    <string name="crd12"><u>Chord Dm7</u></string>
    <string name="cre1"><u>Chord E</u></string>
    <string name="cre2"><u>Chord E6</u></string>
    <string name="cre3"><u>Chord E7</u></string>
    <string name="cre4"><u>Chord E7+ (Augmented 7)</u></string>
    <string name="cre5"><u>Chord E7Sus</u></string>
    <string name="cre6"><u>Chord E9</u></string>
    <string name="cre7"><u>Chord EMaj7</u></string>
    <string name="cre8"><u>Chord E+ (Augmented)</u></string>
    <string name="cre9"><u>Chord Edim</u></string>
    <string name="cre10"><u>Chord Em</u></string>
    <string name="cre11"><u>Chord Em6</u></string>
    <string name="cre12"><u>Chord Em7</u></string>
    <string name="crf1"><u>Chord F</u></string>
    <string name="crf2"><u>Chord F6</u></string>
    <string name="crf3"><u>Chord F7</u></string>
    <string name="crf4"><u>Chord F7+ (Augmented 7)</u></string>
    <string name="crf5"><u>Chord F7Sus</u></string>
    <string name="crf6"><u>Chord F9</u></string>
    <string name="crf7"><u>Chord FMaj7</u></string>
    <string name="crf8"><u>Chord F+ (Augmented)</u></string>
    <string name="crf9"><u>Chord Fdim</u></string>
    <string name="crf10"><u>Chord Fm</u></string>
    <string name="crf11"><u>Chord Fm6</u></string>
    <string name="crf12"><u>Chord Fm7</u></string>
    <string name="crg1"><u>Chord G</u></string>
    <string name="crg2"><u>Chord G6</u></string>
    <string name="crg3"><u>Chord G7</u></string>
    <string name="crg4"><u>Chord G7+ (Augmented 7)</u></string>
    <string name="crg5"><u>Chord G7Sus</u></string>
    <string name="crg6"><u>Chord G9</u></string>
    <string name="crg7"><u>Chord GMaj7</u></string>
    <string name="crg8"><u>Chord G+ (Augmented)</u></string>
    <string name="crg9"><u>Chord Gdim</u></string>
    <string name="crg10"><u>Chord Gm</u></string>
    <string name="crg11"><u>Chord Gm6</u></string>
    <string name="crg12"><u>Chord Gm7</u></string>
    <string name="cra1"><u>Chord A</u></string>
    <string name="cra2"><u>Chord A6</u></string>
</resources>