<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_vertical_margin">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kf1"
                android:id="@+id/kf1"
                android:layout_marginTop="15dp"
                android:textSize="17dp"/>

            <ImageView
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:src="@drawable/kf1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kf2"
                android:id="@+id/kf2"
                android:layout_marginTop="15dp"
                android:textSize="17dp"/>

            <ImageView
                android:layout_width="150dp"
                android:layout_height="115dp"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:src="@drawable/kf2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kf3"
                android:id="@+id/kf3"
                android:layout_marginTop="15dp"
                android:textSize="17dp"/>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>
