<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFF"
    tools:context="com.example.ojan11.arindika.submateri.SubNotasi.Paranada">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/bgbiru">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="PARANADA"
            android:textSize="25dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
            android:id="@+id/tmain"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingRight="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        android:background="#FFF"
        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFF">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFF"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_vertical_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/p1"
                    android:textSize="17dp"
                    android:id="@+id/p1"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    />
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:src="@drawable/pr1"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/p3"
                    android:textSize="17dp"
                    android:id="@+id/p3"
                    />
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:src="@drawable/pr3"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/p4"
                    android:textSize="17dp"
                    android:id="@+id/p4"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/p2"
                    android:id="@+id/p2"
                    android:textSize="17dp"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/pr2"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:text=""
                    android:textSize="17dp"/>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>
</LinearLayout>
